# setup2poetry

./: pyproject.toml
setup2poetry/: adapter.py  cli.py
