[tool.poetry]
name = "setup2poetry"
version = "0.1.0"
description = "Tool to convert setup.py to poetry pyproject.toml"
authors = ["Matt Magin <matt.magin@cmv.com.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pre-commit = "^1.12"
prospector = "^1.1"
pytest = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
